@@ -39,6 +39,7 @@ import java.util.stream.Stream;
 
 import javax.servlet.http.HttpServletResponse;
 
+import com.qubit.qubEdu.module.base.util.XLSxUtil;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang.exception.ExceptionUtils;
 import org.fenixedu.academic.domain.CompetenceCourse;
@@ -538,7 +539,7 @@ public class CompetenceCourseMarkSheetController extends FenixeduUlisboaSpecific
         final String filename = competenceCourse.getCode() + "_"
                 + competenceCourse.getName().replace(' ', '_').replace('/', '-').replace('\\', '-')
                 + competenceCourseMarkSheet.getEvaluationDatePresentation().replace(' ', '_').replace(':', '-')
-                + MarkSheetImportExportService.XLSX_EXTENSION;
+                + XLSxUtil.XLSX_EXTENSION;
 
         writeFile(response, filename, MarkSheetImportExportService.XLSX_MIME_TYPE,
                 MarkSheetImportExportService.exportToXLSX(new CompetenceCourseMarkSheetBean(competenceCourseMarkSheet)));
